--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,66 @@
-#Visual studio junk file
-bin/*/
-/temp/*/
-
-*.tlog
-*.log
-*.pdb
-*.idb
-*.lastbuildstate
-*.opensdf
-*.sdf
-*.suo
-*.user
-*.cache
-*.obj
-*.ilk
-*.pdb
-
-#.obj in resouces are 3d models, save them.
-!res/models/*.obj
+### CMake ###
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
 
 #Doxygen
 docs/html/
 
-#PS3 Specific ignores
-*.o
-*.d
-*.map
-*.pch
-*.gch
-*.tmp
-*.rsp
-*.tlog
-*.xml
-*.unsuccessfulbuild
-#Don't save compiled shaders
-*.fpo
-*.vpo
-#Don't save compiled programs
-*.self
-*.elf
+#Visual studio junk files
+# User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
 
-#Project  Specific ignores
-**/ipch/*
-bin/*/
+# Visual Studio 2015 cache/options directory
+.vs/
+*_i.c
+*_p.c
+*_i.h
+*.ilk
+*.meta
+*.obj
+*.pch
+*.pdb
+*.pgc
+*.pgd
+*.rsp
+*.sbr
+*.tlb
+*.tli
+*.tlh
+*.tmp
+*.tmp_proj
+*.log
+*.vspscc
+*.vssscc
+.builds
+*.pidb
+*.svclog
+*.scc
+
+# Visual C++ cache files
+ipch/
+*.aps
+*.ncb
+*.opensdf
+*.sdf
+*.cachefile
+
+# Visual Studio profiler
+*.psess
+*.vsp
+*.vspx
+
+#.obj in resouces folder are 3d models, save them.
+!res/models/*.obj
+
+#Don't save anything in the build dir
 build/*/
 build/*
+temp/*/
+temp/*
