--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,24 @@
+#Project root
 cmake_minimum_required (VERSION 2.6)
 
 project (Honours)
+if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
+    MESSAGE( "64 bits compiler detected" )
+    SET( EX_PLATFORM 64 )
+    SET( EX_PLATFORM_NAME "x64" )
+	SET( EX_PLATFORM_NAME_S "64" )
+else( CMAKE_SIZEOF_VOID_P EQUAL 8 ) 
+    MESSAGE( "32 bits compiler detected" )
+    SET( EX_PLATFORM 32 )
+    SET( EX_PLATFORM_NAME "x86" )
+	SET( EX_PLATFORM_NAME_S "86" )
+endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )
+
+SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_BINARY_DIR}/bin${EX_PLATFORM_NAME_S}/debug)
+SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin${EX_PLATFORM_NAME_S}/release)
+SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_BINARY_DIR}/lib${EX_PLATFORM_NAME_S}/debug)
+SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib${EX_PLATFORM_NAME_S}/release)
+SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_BINARY_DIR}/lib${EX_PLATFORM_NAME_S}/debug)
+SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib${EX_PLATFORM_NAME_S}/release)
 
 add_subdirectory(src)
