build dir change

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,11 @@ else( CMAKE_SIZEOF_VOID_P EQUAL 8 )
 	SET( EX_PLATFORM_NAME_S "86" )
 endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )
 
-SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_BINARY_DIR}/bin${EX_PLATFORM_NAME_S}/debug)
-SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin${EX_PLATFORM_NAME_S}/release)
-SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_BINARY_DIR}/lib${EX_PLATFORM_NAME_S}/debug)
-SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib${EX_PLATFORM_NAME_S}/release)
-SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_BINARY_DIR}/lib${EX_PLATFORM_NAME_S}/debug)
-SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib${EX_PLATFORM_NAME_S}/release)
+SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_BINARY_DIR}/bin_${EX_PLATFORM_NAME_S}_debug)
+SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin_${EX_PLATFORM_NAME_S}_release)
+SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_BINARY_DIR}/lib_${EX_PLATFORM_NAME_S}_debug)
+SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib_${EX_PLATFORM_NAME_S}_release)
+SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_BINARY_DIR}/lib_${EX_PLATFORM_NAME_S}_debug)
+SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib_${EX_PLATFORM_NAME_S}_release)
 
 add_subdirectory(src)
