--- a/src/DeployTest/CMakeLists.txt
+++ b/src/DeployTest/CMakeLists.txt
@@ -4,3 +4,9 @@
 file( GLOB SRCS *.cpp *.h)
 
 add_executable(DeployTest ${SRCS})
+
+if(${OpenCL_FOUND})
+	target_link_libraries (DeployTest ${OpenCL_LIBRARIES})
+else(${OpenCL_FOUND}) 
+	MESSAGE( "no opencl lib" )
+endif(${OpenCL_FOUND})
