opencl finder cmake module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,8 @@ SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_BINARY_DIR}/lib_${EX_PLATFORM
 SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib_${EX_PLATFORM_NAME_S}_release)
 SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_BINARY_DIR}/lib_${EX_PLATFORM_NAME_S}_debug)
 SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib_${EX_PLATFORM_NAME_S}_release)
-
-find_package(OpenCL)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
+find_package(OpenCLCustom)
 MESSAGE( "OpenCL_FOUND  ${OpenCL_FOUND}")
 MESSAGE( "OpenCL_INCLUDE_DIRS  ${OpenCL_INCLUDE_DIRS}")
 MESSAGE( "OpenCL_LIBRARIES  ${OpenCL_LIBRARIES}")
