--- a/src/DeployTest/CMakeLists.txt
+++ b/src/DeployTest/CMakeLists.txt
@@ -9,4 +9,5 @@ if(${OpenCL_FOUND})
 	target_link_libraries (DeployTest ${OpenCL_LIBRARIES})
 else(${OpenCL_FOUND}) 
 	MESSAGE( "no opencl lib" )
+	message( FATAL_ERROR "Could Not locate OpenCL Library, Exiting cmake" )
 endif(${OpenCL_FOUND})
