Project building on windows with AMD app sdk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,16 +15,18 @@ else( CMAKE_SIZEOF_VOID_P EQUAL 8 )
 	SET( EX_PLATFORM_NAME_S "86" )
 endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )
 
-include(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-if(COMPILER_SUPPORTS_CXX11)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-elseif(COMPILER_SUPPORTS_CXX0X)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-else()
-        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
-endif()
+if(!MSVC)
+	include(CheckCXXCompilerFlag)
+	CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+	CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
+	if(COMPILER_SUPPORTS_CXX11)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+	elseif(COMPILER_SUPPORTS_CXX0X)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+	else()
+		message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+	endif(COMPILER_SUPPORTS_CXX11)
+endif(!MSVC)
 
 SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG 	${CMAKE_BINARY_DIR}/bin_${EX_PLATFORM_NAME_S}_debug)
 SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin_${EX_PLATFORM_NAME_S}_release)
@@ -45,13 +47,16 @@ MESSAGE( "OpenCL_VERSION_MINOR  ${OpenCL_VERSION_MINOR}")
 MESSAGE( "OpenCL_INCLUDE_DIR  ${OpenCL_INCLUDE_DIR}")
 MESSAGE( "OpenCL_LIBRARY ${OpenCL_LIBRARY}")
 
+if(OpenCL_INCLUDE_DIRS)
+	include_directories (${OpenCL_INCLUDE_DIRS})
+endif(OpenCL_INCLUDE_DIRS)
+
 if(DEFINED ENV{CUDA_PATH})
 	MESSAGE( "Cuda Path = $ENV{CUDA_PATH}" )
 	SET(CUDA true)
-	include_directories ("$ENV{CUDA_PATH}/include")
-else(DEFINED ENV{CUDA_PATH}) 
-	MESSAGE( "no cuda path" )
-	SET(CUDA false)
+elseif(DEFINED ENV{AMDAPPSDKROOT})
+	MESSAGE( "AMD Path = $ENV{AMDAPPSDKROOT}" )
+	SET(CUDA true)
 endif(DEFINED ENV{CUDA_PATH})
 
 add_subdirectory(src)
