Detecting both AMd and cuda sdks in cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,17 +46,27 @@ MESSAGE( "OpenCL_VERSION_MAJOR ${OpenCL_VERSION_MAJOR}")
 MESSAGE( "OpenCL_VERSION_MINOR  ${OpenCL_VERSION_MINOR}")
 MESSAGE( "OpenCL_INCLUDE_DIR  ${OpenCL_INCLUDE_DIR}")
 MESSAGE( "OpenCL_LIBRARY ${OpenCL_LIBRARY}")
+if(AMD_OpenCL_FOUND)
+	MESSAGE( "AMD_OpenCL_INCLUDE_DIRS  ${AMD_OpenCL_INCLUDE_DIRS}")
+	MESSAGE( "AMD_OpenCL_LIBRARIES  ${AMD_OpenCL_LIBRARIES}")
+	MESSAGE( "AMD_OpenCL_VERSION_STRING  ${AMD_OpenCL_VERSION_STRING}")
+	MESSAGE( "AMD_OpenCL_VERSION_MAJOR ${AMD_OpenCL_VERSION_MAJOR}")
+	MESSAGE( "AMD_OpenCL_VERSION_MINOR  ${AMD_OpenCL_VERSION_MINOR}")
+	MESSAGE( "AMD_OpenCL_INCLUDE_DIR  ${AMD_OpenCL_INCLUDE_DIR}")
+	MESSAGE( "AMD_OpenCL_LIBRARY ${AMD_OpenCL_LIBRARY}")
+endif()
+if(NVIDIA_OpenCL_FOUND)
+	MESSAGE( "NVIDIA_OpenCL_INCLUDE_DIRS  ${NVIDIA_OpenCL_INCLUDE_DIRS}")
+	MESSAGE( "NVIDIA_OpenCL_LIBRARIES  ${NVIDIA_OpenCL_LIBRARIES}")
+	MESSAGE( "NVIDIA_OpenCL_VERSION_STRING  ${NVIDIA_OpenCL_VERSION_STRING}")
+	MESSAGE( "NVIDIA_OpenCL_VERSION_MAJOR ${NVIDIA_OpenCL_VERSION_MAJOR}")
+	MESSAGE( "NVIDIA_OpenCL_VERSION_MINOR  ${NVIDIA_OpenCL_VERSION_MINOR}")
+	MESSAGE( "NVIDIA_OpenCL_INCLUDE_DIR  ${NVIDIA_OpenCL_INCLUDE_DIR}")
+	MESSAGE( "NVIDIA_OpenCL_LIBRARY ${NVIDIA_OpenCL_LIBRARY}")
+endif()
 
 if(OpenCL_INCLUDE_DIRS)
 	include_directories (${OpenCL_INCLUDE_DIRS})
 endif(OpenCL_INCLUDE_DIRS)
-
-if(DEFINED ENV{CUDA_PATH})
-	MESSAGE( "Cuda Path = $ENV{CUDA_PATH}" )
-	SET(CUDA true)
-elseif(DEFINED ENV{AMDAPPSDKROOT})
-	MESSAGE( "AMD Path = $ENV{AMDAPPSDKROOT}" )
-	SET(CUDA true)
-endif(DEFINED ENV{CUDA_PATH})
 
 add_subdirectory(src)
