Cmake copy cl files to build dir.

--- a/src/DeployTest/CMakeLists.txt
+++ b/src/DeployTest/CMakeLists.txt
@@ -1,7 +1,7 @@
 #DeployTest
 
 # find all *cpp, *h in current dir and assign to var SRCS
-file( GLOB SRCS *.cpp *.h)
+file( GLOB SRCS *.cpp *.h *.cl)
 
 add_executable(DeployTest ${SRCS})
 
@@ -15,3 +15,16 @@ else(${OpenCL_FOUND})
 	MESSAGE( "no opencl lib" )
 	message( FATAL_ERROR "Could Not locate OpenCL Library, Exiting cmake" )
 endif(${OpenCL_FOUND})
+
+file(GLOB CL_PROGRAMS
+  "${CMAKE_CURRENT_SOURCE_DIR}/*.cl" 
+)
+
+add_custom_command(
+	TARGET DeployTest POST_BUILD        # Adds a post-build event to MyTest
+    COMMAND ${CMAKE_COMMAND}
+	-E copy_if_different  # which executes "cmake - E copy_if_different..."
+    ${CL_PROGRAMS}    # <--this is in-file
+    $<TARGET_FILE_DIR:DeployTest>
+	COMMENT "Copying ${SRCFILE} ${TO_DIR}"
+)
