cuda should now use cpp11 llvm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ endif(OpenCL_INCLUDE_DIRS)
 
 if (CUDA_FOUND)
 	message("CUDA found")
+	LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11")
 else()
 	message("CUDA not found")
 endif()
